# aq-vis-backend

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  nginx.conf  timelog.txt
app/: .env.sample  .flake8  Dockerfile  README.md  dev.Dockerfile  main.py  pyproject.toml  requirements.txt  requirements_dev.txt
app/models/: user.py
app/src/: main.py
app/src/api/: __init__.py  auth.py  devices.py  measurements.py  organisations.py  units.py  user.py
app/src/api/admin/: admin.py  organisations.py  users.py
app/src/auth/: auth_bearer.py  auth_handler.py
app/src/database/: __init__.py  database.py
app/src/database/operations/: __init__.py  auth.py  device.py  organisation.py  user.py
app/src/dependencies/: authentication.py  users.py
app/src/exceptions/: __init__.py
app/src/middleware/: __init__.py  authentication.py
app/src/models/: __init__.py  auth.py  device.py  organisation.py  unit.py  user.py
app/src/schema/: schemas.py
app/src/utils/: __init__.py  config.py  database.py
app/test/: example_test.py  test_admin_api.py  test_admin_devices_api.py  test_admin_organisations_api.py  test_admin_users_api.py  test_auth.py  test_devices.py  test_devices_api.py  test_organisations.py  test_organisations_api.py  test_users.py  test_users_api.py  users_api.py
app/test/data/: device_json.py  organisation_json.py  user_json.py
app/test/functions/: __init__.py
app/utils/: config.py
docs/: howto.md  howto_add_user.md  howto_admin_authentication.md  howto_create_organisation.md  howto_create_user.md
scripts/: start.sh
(+1 files in other folders)
