[project]
name = "cpc_vis_ideal_aq"
version = "0.0.1"
authors = [
  { name="Dominik Rohal", email="rohal.dominik.123@gmail.com" },
]
description = "Backend for data visualisation app."
readme = "README.md"
requires-python = "3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools]
py-modules = ["src"]

[tool.black]
line-length = 79 # black recommends 88, PEP8 recommends 79